[Home]

Summary:ASTERISK-29244: Add MixMonitorStart / Stop / Mute AMI events
Reporter:Sébastien Duthil (sduthil)Labels:
Date Opened:2021-01-13 13:59:53.000-0600Date Closed:2021-02-23 11:43:17.000-0600
Priority:MinorRegression?No
Status:Closed/CompleteComponents:Applications/app_mixmonitor
Versions:18.1.0 Frequency of
Occurrence
Related
Issues:
Environment:Attachments:
Description:As an AMI client
I would like to know when a channel starts or stops being recorded, e.g. via dialplan or an AGI script
I would also like to know when a channel's recording is being muted or unmuted

The expected behavior is identical to MonitorStart and MonitorStop AMI events.

I'll submit a patch for review on Gerrit.
Comments:By: Asterisk Team (asteriskteam) 2021-01-13 13:59:53.921-0600

Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed.

A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report.

Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process].

Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur.

Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/].

By: Friendly Automation (friendly-automation) 2021-02-23 11:43:19.211-0600

Change 15325 merged by Friendly Automation:
app_mixmonitor: Add AMI events MixMonitorStart, -Stop and -Mute.

[https://gerrit.asterisk.org/c/asterisk/+/15325|https://gerrit.asterisk.org/c/asterisk/+/15325]

By: Friendly Automation (friendly-automation) 2021-02-23 12:16:17.396-0600

Change 15480 merged by George Joseph:
app_mixmonitor: Add AMI events MixMonitorStart, -Stop and -Mute.

[https://gerrit.asterisk.org/c/asterisk/+/15480|https://gerrit.asterisk.org/c/asterisk/+/15480]

By: Friendly Automation (friendly-automation) 2021-02-23 12:17:32.988-0600

Change 15479 merged by George Joseph:
app_mixmonitor: Add AMI events MixMonitorStart, -Stop and -Mute.

[https://gerrit.asterisk.org/c/asterisk/+/15479|https://gerrit.asterisk.org/c/asterisk/+/15479]